@@ -118,7 +118,7 @@ namespace libtorrent
 			, min_reconnect_time(60)
 			, peer_connect_timeout(15)
 			, ignore_limits_on_local_network(true)
-			, connection_speed(10)
+			, connection_speed(6)
 			, send_redundant_have(false)
 			, lazy_bitfields(true)
 			, inactivity_timeout(600)
@@ -236,7 +236,7 @@ namespace libtorrent
 			, enable_incoming_utp(true)
 			, enable_outgoing_tcp(true)
 			, enable_incoming_tcp(true)
-			, max_pex_peers(200)
+			, max_pex_peers(50)
 			, ignore_resume_timestamps(false)
 			, no_recheck_incomplete_resume(false)
 			, anonymous_mode(false)
